--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,7 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @plugin "daisyui" {
-  themes: light --default, light -prefersdark;
+  themes:
+    light --default,
+    light -prefersdark;
 }
